--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,9 @@
 {
   "name": "comic-server",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
+    "dev": "NODE_ENV=development nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
@@ -11,10 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
+    "bcrypt": "^3.0.8",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http-server": "^0.12.1",
+    "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.18.1",
     "sequelize": "^5.21.4"
+  },
+  "description": "",
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
